--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .top-bar {
+            background-color: black;
+            height: 50px;
+            width: 100%;
+        }
+        .content {
             max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
+            margin: auto;
             text-align: center;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         .main-title {
             font-size: 32px;
@@ -22,17 +37,21 @@
         #searchInput {
             width: 80%;
             padding: 10px;
-            margin-bottom: 20px;
+            margin: 0 auto 20px;
             font-size: 16px;
+            display: block;
         }
     </style>
 </head>
 <body>
-    <h1 class="main-title">僱主支援中心</h1>
-    <p class="sub-title">您今天需要什麼協助？</p>
-    <form id="searchForm" action="result.html" method="get">
-        <input type="text" id="searchInput" name="query" placeholder="搜尋...">
-    </form>
+    <div class="top-bar"></div>
+    <div class="content">
+        <h1 class="main-title">僱主支援中心</h1>
+        <p class="sub-title">您今天需要什麼協助？</p>
+        <form id="searchForm" action="result.html" method="get">
+            <input type="text" id="searchInput" name="query" placeholder="搜尋...">
+        </form>
+    </div>
 
     <script>
         document.getElementById('searchForm').addEventListener('submit', function(e) {
