--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             justify-content: center;
         }
         .main-title {
-            font-size: 48px; /* 增大1.5倍 */
+            font-size: 48px;
             margin-bottom: 10px;
         }
         .sub-title {
-            font-size: 27px; /* 增大1.5倍 */
+            font-size: 27px;
             margin-bottom: 20px;
         }
         .search-container {
@@ -41,7 +41,7 @@
             width: 100%;
         }
         #searchInput {
-            width: calc(160% - 40px); /* 增加2倍寬度，減去按鈕寬度 */
+            width: 160%; /* 原來的兩倍 */
             padding: 10px;
             font-size: 16px;
             border: 1px solid #dfe1e5;
@@ -71,23 +71,4 @@
         <h1 class="main-title">僱主支援中心</h1>
         <p class="sub-title">您今天需要什麼協助？</p>
         <form id="searchForm" action="result.html" method="get">
-            <div class="search-container">
-                <input type="text" id="searchInput" name="query" placeholder="搜尋...">
-                <button type="submit" id="searchButton">
-                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px">
-                        <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                    </svg>
-                </button>
-            </div>
-        </form>
-    </div>
-
-    <script>
-        document.getElementById('searchForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const query = document.getElementById('searchInput').value;
-            window.location.href = `result.html?query=${encodeURIComponent(query)}`;
-        });
-    </script>
-</body>
-</html>
+            <d
