Update and rename result.html to SearchResult.html

--- a/SearchResult.html
+++ b/SearchResult.html
@@ -51,3 +51,9 @@
     </script>
 </body>
 </html>
+
+-------------------------------------
+#searchInput {
+    width: 160%; /* 原來的兩倍 */
+    /* 其他樣式保持不變 */
+}
