--- a/signin.html
+++ b/signin.html
@@ -1,102 +1,72 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>搜尋結果 - 僱主支援中心</title>
-    <meta name="description" content="僱主支援中心搜尋結果 - 查找您需要的僱主相關資訊。">
+    <title>Sign In</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            margin: 0;
-            padding: 0;
-        }
-        .top-bar {
-            background-color: black;
-            height: 50px;
-            width: 100%;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             align-items: center;
-            padding-right: 20px;
+            height: 100vh;
+            margin: 0;
         }
-        .sign-in-button {
-            background-color: #4CAF50;
+        .login-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 350px;
+        }
+        h2 {
+            text-align: center;
+            color: #1877f2;
+        }
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 12px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+            border-radius: 4px;
+        }
+        button {
+            background-color: #1877f2;
             color: white;
-            padding: 10px 15px;
+            padding: 14px 20px;
+            margin: 8px 0;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
+            width: 100%;
+            border-radius: 4px;
+        }
+        button:hover {
+            background-color: #166fe5;
+        }
+        .forgot-password {
+            text-align: center;
+        }
+        .forgot-password a {
+            color: #1877f2;
             text-decoration: none;
-        }
-        .sign-in-button:hover {
-            background-color: #45a049;
-        }
-        .content {
-            max-width: 800px; 
-            margin: 0 auto; 
-            padding: 20px; 
-        }
-        #result { 
-            border: 1px solid #ddd; 
-            padding: 20px; 
-            margin-top: 20px; 
-        }
-        .back-link { 
-            display: inline-block; 
-            margin-top: 20px; 
         }
     </style>
 </head>
 <body>
-    <div class="top-bar">
-        <a href="signin.html" class="sign-in-button">Sign In</a>
+    <div class="login-container">
+        <h2>Sign In</h2>
+        <form>
+            <input type="text" placeholder="Email or Phone Number" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Sign In</button>
+        </form>
+        <div class="forgot-password">
+            <a href="#">Forgot Password?</a>
+        </div>
     </div>
-    <div class="content">
-        <h1>搜尋結果</h1>
-        <div id="result" role="main" aria-live="polite"></div>
-        <a href="index.html" class="back-link">返回搜尋</a>
-    </div>
-    <script>
-        const qa = {
-            "如何發布工作": "登入您的帳戶，點擊'發布新工作'，填寫所需信息並提交。",
-            "如何查看應聘者": "在您的儀表板上，點擊'查看應聘者'，您可以看到所有申請您職位的候選人。",
-            "如何更新公司資料": "進入'公司設置'，您可以編輯公司簡介、logo和其他相關信息。",
-            "如何聯繫客服": "您可以通過郵件support@example.com或撥打熱線400-123-4567聯繫我們的客服團隊。"
-        };
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
-        function displayResult() {
-            const query = getQueryParam('query');
-            const resultDiv = document.getElementById('result');
-            if (query) {
-                let found = false;
-                for (let question in qa) {
-                    if (question.toLowerCase().includes(query.toLowerCase())) {
-                        const h2 = document.createElement('h2');
-                        h2.textContent = question;
-                        const p = document.createElement('p');
-                        p.textContent = qa[question];
-                        resultDiv.appendChild(h2);
-                        resultDiv.appendChild(p);
-                        found = true;
-                    }
-                }
-                if (!found) {
-                    resultDiv.textContent = '很抱歉，沒有找到相關結果。請嘗試其他關鍵詞或聯繫我們的客服。';
-                }
-            } else {
-                resultDiv.textContent = '未提供搜尋關鍵詞。';
-            }
-        }
-        try {
-            displayResult();
-        } catch (error) {
-            console.error('發生錯誤：', error);
-            document.getElementById('result').textContent = '搜尋過程中發生錯誤，請稍後再試。';
-        }
-    </script>
 </body>
 </html>
